fix: adjust spacing and button component

--- a/pages/04-three-columns-preview/css/style.css
+++ b/pages/04-three-columns-preview/css/style.css
@@ -83,6 +83,10 @@ body {
   flex-direction: column;
   padding: 5rem;
   color: rgba(255, 255, 255, 0.749); }
+  @media screen and (min-width: 65.25em) {
+    .card {
+      padding: 5rem 4.8rem;
+      width: 30.6rem; } }
   .card__icon {
     margin-bottom: 3.5rem; }
   .card__title {
@@ -96,7 +100,7 @@ body {
     margin-bottom: 2.4rem; }
     @media screen and (min-width: 65.25em) {
       .card__paragraph {
-        margin-bottom: 8.4rem; } }
+        margin-bottom: 8.2rem; } }
   .card:nth-child(2) {
     background-color: #e38826; }
     .card:nth-child(2) > .btn {
@@ -114,12 +118,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 14.7rem;
-  height: 4.8rem;
+  width: 14.5rem;
+  height: 4.6rem;
   background-color: #f2f2f2;
+  border: 2px solid #f2f2f2;
   border-radius: 2.5rem;
   text-decoration: none;
-  color: inherit;
   cursor: pointer; }
 
 html {
