--- a/pages/04-three-columns-preview/sass/components/_button.scss
+++ b/pages/04-three-columns-preview/sass/components/_button.scss
@@ -2,11 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 14.7rem;
-  height: 4.8rem;
+  width: 14.5rem;
+  height: 4.6rem;
   background-color: $neutral-light-2;
+  border: 2px solid $neutral-light-2;
   border-radius: 2.5rem;
   text-decoration: none;
-  color: inherit;
   cursor: pointer;
+
 }
